ValueNode.getKind is really getStackKind